
package rti;

message ResponseShowOrderHistorySummary
{
	// Field IDs from rundef/async_rithmic (verified Jan 2026)
	// Same field IDs as other messages (PB_OFFSET = 100000)
	optional int32        template_id  = 154467;
	repeated string       user_msg     = 132760;
	repeated string       rp_code      = 132766;
}
